<resources>
    <string name="app_name">LogCatcher</string>
    <string name="log_auto_saving">Auto Saving</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="logger_catcher_settings">Logger Catcher Settings</string>
    <string name="log_preferences">Logging Preferences</string>
    <string name="log_keep_numbers">Max Log Keeping Days</string>
    <string name="log_saving_location">Default Log Saving Location</string>
    <string name="log_auto_saving_summary">Automatically save logs to storage</string>
    <string name="log_level_title">Default Log Level</string>
    <string name="log_format_title">Default Log Format</string>
    <string name="log_buffer_title">Default Log Buffer</string>
    <string name="main_title" translatable="false">Main</string>
    <string name="events_title" translatable="false">Events</string>
    <string name="radio_title" translatable="false">Radio</string>
    <string name="brief_title" translatable="false">Brief</string>
    <string name="process_title" translatable="false">Process</string>
    <string name="tag_title" translatable="false">Tag</string>
    <string name="thread_title" translatable="false">Thread</string>
    <string name="time_title" translatable="false">Time</string>
    <string name="thread_time_title" translatable="false">Thread Time</string>
    <string name="long_title" translatable="false">Long</string>
    <string name="raw_title" translatable="false">Raw</string>
    <string name="verbose_title" translatable="false">Verbose</string>
    <string name="debug_title" translatable="false">Debug</string>
    <string name="info_title" translatable="false">Information</string>
    <string name="warn_title" translatable="false">Warning</string>
    <string name="error_title" translatable="false">Error</string>
    <string name="fatal_title" translatable="false">Fatal</string>
    <string name="default_title">Default</string>
    <string name="log_max_size_per_file">Max Log Size (MB)</string>
    <string name="system_title">System</string>
    <string name="crash_title">Crash</string>
    <string name="all_title">All</string>
</resources>