<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/logger_catcher_settings">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="log_auto_saving"
            app:summary="@string/log_auto_saving_summary"
            app:title="@string/log_auto_saving" />

        <EditTextPreference
            app:defaultValue="7"
            app:dependency="log_auto_saving"
            app:iconSpaceReserved="false"
            app:key="log_keep_days"
            app:title="@string/log_keep_numbers"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="0"
            app:dependency="log_auto_saving"
            app:entries="@array/log_saving_locations"
            app:entryValues="@array/log_saving_locations_values"
            app:iconSpaceReserved="false"
            app:key="log_saving_location"
            app:title="@string/log_saving_location"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/log_preferences">

        <ListPreference
            android:defaultValue="0"
            app:dependency="log_auto_saving"
            app:entries="@array/log_level"
            app:entryValues="@array/log_level_values"
            app:iconSpaceReserved="false"
            app:key="log_level"
            app:title="@string/log_level_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="0"
            app:dependency="log_auto_saving"
            app:entries="@array/log_format"
            app:entryValues="@array/log_format_values"
            app:iconSpaceReserved="false"
            app:key="log_format"
            app:title="@string/log_format_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="0"
            app:dependency="log_auto_saving"
            app:entries="@array/log_buffer"
            app:entryValues="@array/log_buffer_values"
            app:iconSpaceReserved="false"
            app:key="log_buffer"
            app:title="@string/log_buffer_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>